--- a/Coursach/Coursach.vcxproj
+++ b/Coursach/Coursach.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="sha1.cpp" />
     <ClCompile Include="past.cpp" />
     <ClCompile Include="source.cpp" />
+    <ClCompile Include="Subject.cpp" />
     <ClCompile Include="user.cpp" />
   </ItemGroup>
   <ItemGroup>
