Добавил предметы, инфо о студентах, проверка даты.

--- a/Coursach/Coursach.vcxproj
+++ b/Coursach/Coursach.vcxproj
@@ -139,13 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="accounting.cpp" />
     <ClCompile Include="admin.cpp" />
     <ClCompile Include="entrance.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="sha1.cpp" />
     <ClCompile Include="past.cpp" />
     <ClCompile Include="source.cpp" />
-    <ClCompile Include="Subject.cpp" />
+    <ClCompile Include="student.cpp" />
+    <ClCompile Include="subject.cpp" />
     <ClCompile Include="user.cpp" />
   </ItemGroup>
   <ItemGroup>
