--- a/Coursach/Coursach.vcxproj
+++ b/Coursach/Coursach.vcxproj
@@ -156,7 +156,10 @@
     <ClInclude Include="sha1.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="accounting_data.txt" />
     <Text Include="file_log_pas.txt" />
+    <Text Include="student_data.txt" />
+    <Text Include="subject_data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
